# Flexutils-Toolkit

./: .gitignore  README.md  README.rst  install.sh  install_open3d.sh  pyproject.toml  setup.cfg  setup.py  setup_working.py
.github/workflows/: build.yml  publish_and_tag.yml
deprecated/: deep_pose.py  flexsiren_basis.py  generator_deep_pose.py  generator_homo_siren.py  predict_deep_nma.py  predict_deep_pose.py  predict_homo_siren.py  predict_map_deep_nma.py  train_deep_elastic.py  train_deep_nma.py  train_deep_pose.py  train_homo_siren.py
deprecated/NMA/: anm.py
requirements/: tensorflow_2_11_requirements.txt  tensorflow_2_12_requirements.txt  tensorflow_2_14_requirements.txt  tensorflow_2_15_requirements.txt  tensorflow_2_17_requirements.txt  tensorflow_2_3_requirements.txt  tensorflow_2_4_requirements.txt  tensorflow_2_9_2_requirements.txt
setup_env/: __init__.py
tensorflow_toolkit/: __init__.py  build.py
tensorflow_toolkit/datasets/: __init__.py  dataset_template.py
tensorflow_toolkit/generators/: generator_deep_nma.py  generator_deep_pose.py  generator_flex_consensus.py  generator_flexsiren.py  generator_het_siren.py  generator_reconsiren.py  generator_template.py  generator_zernike3deep.py
tensorflow_toolkit/layers/: cbam.py  siren.py  siren_keras_3.py
tensorflow_toolkit/networks/: deep_nma.py  deep_pose.py  deep_pose_vae.py  flex_consensus.py  flexsiren.py  flexsiren_basis.py  het_siren.py  reconsiren.py  zernike3deep.py
tensorflow_toolkit/scripts/: compute_distance_matrix_zernike3deep.py  convect_map_flexsiren.py  find_optimal_clusters.py  predict_deep_nma.py  predict_deep_pose.py  predict_flex_consensus.py  predict_flexsiren.py  predict_het_siren.py  predict_homo_siren.py  predict_map_deep_nma.py  predict_map_het_siren.py  predict_particles_het_siren.py  predict_reconsiren.py  predict_zernike3deep.py  train_deep_elastic.py  train_deep_nma.py  train_deep_pose.py  train_flex_consensus.py  (+5 more)
toolkit/: setup.py
(+45 files in other folders)
