[metadata]
name = tensorflow_toolkit
version = attr: tensorflow_toolkit.__version__
author = David Herreros
author_email = dherreros@cnb.csic.es
description = EXmipp neural network utilities for flexibility
long_description = file: README.md
long_description_content_type = text/markdown
keywords = scipion continuous-heterogeneity imageprocessing xmipp
license = GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007

[options]
;cmdclass = install = tensorflow_toolkit.build.Installation
packages = find:
zip_safe = True
include_package_data = True

[options.entry_points]
console_scripts =
    find_optimal_clusters.py = tensorflow_toolkit.scripts.find_optimal_clusters:main
    predict_flex_consensus.py = tensorflow_toolkit.scripts.predict_flex_consensus:main
    predict_het_siren.py = tensorflow_toolkit.scripts.predict_het_siren:main
    predict_flexsiren.py = tensorflow_toolkit.scripts.predict_flexsiren:main
    predict_homo_siren.py = tensorflow_toolkit.scripts.predict_homo_siren:main
    predict_map_deep_nma.py = tensorflow_toolkit.scripts.predict_map_deep_nma:main
    predict_map_het_siren.py = tensorflow_toolkit.scripts.predict_map_het_siren:main
    convect_map_flexsiren.py = tensorflow_toolkit.scripts.convect_map_flexsiren:main
    predict_particles_het_siren.py = tensorflow_toolkit.scripts.predict_particles_het_siren:main
    predict_zernike3deep.py = tensorflow_toolkit.scripts.predict_zernike3deep:main
    train_flex_consensus.py = tensorflow_toolkit.scripts.train_flex_consensus:main
    train_het_siren.py = tensorflow_toolkit.scripts.train_het_siren:main
    train_flexsiren.py = tensorflow_toolkit.scripts.train_flexsiren:main
    train_homo_siren.py = tensorflow_toolkit.scripts.train_homo_siren:main
    train_zernike3deep.py = tensorflow_toolkit.scripts.train_zernike3deep:main

[options.package_data]
requirements = *.txt
* = README.md
